99% done, almost there

--- a/sales.html
+++ b/sales.html
@@ -13,16 +13,16 @@
                 <legend>New Store Info:</legend>
                         
                 <label>Location Name:
-                    <input type="text" name="new-location" required="required" />
+                    <input type="text" name="newLocation" required="required" />
                 </label>
                 <label>Min Hourly Customers:
-                    <input type="text" name="minimum-customers" required="required" />
+                    <input type="text" name="minimumCustomers" required="required" />
                 </label>
                 <label>Max Hourly Customers:
-                        <input type="text" name="maximum-customers" required="required" />
+                        <input type="text" name="maximumCustomers" required="required" />
                 </label>
                 <label>Avg Cookies Per Customer:
-                        <input type="text" name="avg-cookies-per-customer" required="required" />
+                        <input type="text" name="avgCookiesPerCustomer" required="required" />
                 </label>
                 <input type="submit" value="Submit" />
             </fieldset>
